--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Beerhamyde</string>
     <string name="number_player">PLAYER NAME :</string>
     <string name="add_player">ADD A PLAYER</string>
+    <string name="validate">VALIDATE</string>
 </resources>
